finishded authentication and some endpoints for doctor
